add new features

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </div>
    <div class="container">
     <div class="top">
-        <div class="life">Highest : <span id="highest">3</span></div>
+        <div class="life">Highest : <span id="highest"></span></div>
         <div class="life">Score : <span id="score">0</span></div>
-        <div class="life">Life : <span id="counter">3</span></div>
+        <div class="life" id="heart">Life : <span id="counter"></span></div>
     </div>
     <div class="head">
         Guess The Word
